[add]添加了按钮，可以正常上传图片

--- a/test.html
+++ b/test.html
@@ -32,19 +32,15 @@
         }
     </style>
     <script src="zepto.js"></script>
-
     <script src="umeditor.config.js"></script>
     <script src="editor_api.js"></script>
     <script src="lang/zh-cn/zh-cn.js"></script>
     <link rel="stylesheet" href="./themes/umeditor.css"/>
-
-    <script src="third-party/gmu/gmu.js"></script>
-    <link rel="stylesheet" href="third-party/gmu/gmu.css"/>
 </head>
 <body>
 
 <h1>M-Editor演示</h1>
-<div style="width:100%;min-height:80px;" class="editor_input" id="editor"><img class="slider" src="php/upload/20131113/13843231293041.jpg" width="60" height="60" style="border:1px #ccc solid;margin-right:2px;"/><img class="slider" src="php/upload/20131113/13843231295968.jpg" width="60" height="60" style="border:1px #ccc solid;margin-right:2px;"/><img class="slider" src="php/upload/20131113/13843231291527.jpg" width="60" height="60" style="border:1px #ccc solid;margin-right:2px;"/><img class="slider" src="php/upload/20131113/13843231291427.jpg" width="60" height="60" style="border:1px #ccc solid;margin-right:2px;"/></div>
+<div style="width:100%;min-height:80px;" class="editor_input" id="editor">13246578901234567890</div>
 <div class="editor_menu">
     <a href="javascript:void(0)" class="edui-btn edui-btn-photo"><input type="file" name="photo" id="photo" accept="image/*" multiple="multiple" /></a>
     <a href="javascript:void(0)" class="edui-btn edui-btn-camera"><input type="file" name="camera" id="camera" accept="image/*" /></a>
