[fix]by Jinqn 完成插入图片流程

--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
 <h1>M-Editor演示</h1>
 <div style="width:100%;min-height:80px;" class="editor_input" id="editor">adasdasdasdasdkjashkdhakjsd<br/><img class="slider" src="http://bs.baidu.com/uploadimg/1031384407855.jpg" width="60" height="60" style="border:1px #ccc solid;margin-right:2px;"/><img class="slider" src="http://bs.baidu.com/uploadimg/14711384407892.jpg" width="60" height="60" style="border:1px #ccc solid;margin-right:2px;"/><img class="slider" src="http://bs.baidu.com/uploadimg/96771384407909.jpg" width="60" height="60" style="border:1px #ccc solid;margin-right:2px;"/><img class="slider" src="http://bs.baidu.com/uploadimg/53231384407920.jpg" width="60" height="60" style="border:1px #ccc solid;margin-right:2px;"/></div>
 
+<br />
+<br />
+audio标签：
+<br />
+<audio src="http://www.w3school.com.cn/i/horse.ogg" controls="controls" style="color: rgb(153, 153, 153); font-family: STHeiti; font-size: 14px; font-weight: 600; white-space: pre-wrap; width: 280px;">
+
 <script>
     var editor = new UM.Editor();
     editor.render('editor')
