--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>M-Editor演示</title>
     <style>
         .editor_input {
-            white-space: pre-wrap;
             word-wrap: break-word;
             -webkit-appearance: none;
             -webkit-border-radius: 3px;
@@ -57,7 +56,12 @@
 <body>
 
 <h1>M-Editor演示</h1>
-<div style="width:100%;min-height:80px;" class="editor_input" id="editor">adasdasdasdasdkjashkdhakjsd<br/><img class="slider" src="http://bs.baidu.com/uploadimg/1031384407855.jpg" width="60" height="60" style="border:1px #ccc solid;margin-right:2px;"/><img class="slider" src="http://bs.baidu.com/uploadimg/14711384407892.jpg" width="60" height="60" style="border:1px #ccc solid;margin-right:2px;"/><img class="slider" src="http://bs.baidu.com/uploadimg/96771384407909.jpg" width="60" height="60" style="border:1px #ccc solid;margin-right:2px;"/><img class="slider" src="http://bs.baidu.com/uploadimg/53231384407920.jpg" width="60" height="60" style="border:1px #ccc solid;margin-right:2px;"/></div>
+<div style="width:100%;min-height:80px;" class="editor_input" id="editor">
+    <p>adasdasdasdasdkjashkdhakjsd</p>
+    <p>
+        <img class="slider" src="http://bs.baidu.com/uploadimg/1031384407855.jpg" width="60" height="60" style="border:1px #ccc solid;margin-right:2px;"/><img class="slider" src="http://bs.baidu.com/uploadimg/14711384407892.jpg" width="60" height="60" style="border:1px #ccc solid;margin-right:2px;"/><img class="slider" src="http://bs.baidu.com/uploadimg/96771384407909.jpg" width="60" height="60" style="border:1px #ccc solid;margin-right:2px;"/><img class="slider" src="http://bs.baidu.com/uploadimg/53231384407920.jpg" width="60" height="60" style="border:1px #ccc solid;margin-right:2px;"/>
+    </p>
+</div>
 <div class="editor_toolbar"><a class="editor_submit">提交</a></div>
 <br />
 <br />
