--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <h1>M-Editor演示</h1>
 <div style="width:100%;min-height:80px;" class="editor_input" id="editor">
-    <p>adasdasdasdasdkjashkdhakjsd</p>
+    <p>Zepto is a minimalist JavaScript library for modern browsers with a largely jQuery-compatible API.</p>
     <p>
         <img class="slider" src="http://bs.baidu.com/uploadimg/1031384407855.jpg" width="60" height="60" style="border:1px #ccc solid;margin-right:2px;"/><img class="slider" src="http://bs.baidu.com/uploadimg/14711384407892.jpg" width="60" height="60" style="border:1px #ccc solid;margin-right:2px;"/><img class="slider" src="http://bs.baidu.com/uploadimg/96771384407909.jpg" width="60" height="60" style="border:1px #ccc solid;margin-right:2px;"/><img class="slider" src="http://bs.baidu.com/uploadimg/53231384407920.jpg" width="60" height="60" style="border:1px #ccc solid;margin-right:2px;"/>
     </p>
@@ -66,8 +66,7 @@
 <br />
 <br />
 audio标签：
-<br />
-<audio src="http://www.w3school.com.cn/i/horse.ogg" controls="controls" style="color: rgb(153, 153, 153); font-family: STHeiti; font-size: 14px; font-weight: 600; white-space: pre-wrap; width: 280px;">
+<audio src="http://seswell.com/view/vedio/%E5%85%89%E9%98%B4%E7%9A%84%E6%95%85%E4%BA%8B.mp3" controls="controls" style="width: 100px;">
 
 <script>
     var editor = new UM.Editor();
