--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <body>
 
 <h1>M-Editor演示</h1>
-<div style="width:100%;min-height:80px;" class="editor_input" id="editor">
+<div style="width:100%;min-height:80px;" contenteditable="true" class="editor_input" id="editor">
     <p>Zepto is a minimalist JavaScript library for modern browsers with a largely jQuery-compatible API.</p>
     <p>
         <img class="slider" src="http://bs.baidu.com/uploadimg/1031384407855.jpg" width="60" height="60" style="border:1px #ccc solid;margin-right:2px;"/><img class="slider" src="http://bs.baidu.com/uploadimg/14711384407892.jpg" width="60" height="60" style="border:1px #ccc solid;margin-right:2px;"/><img class="slider" src="http://bs.baidu.com/uploadimg/96771384407909.jpg" width="60" height="60" style="border:1px #ccc solid;margin-right:2px;"/><img class="slider" src="http://bs.baidu.com/uploadimg/53231384407920.jpg" width="60" height="60" style="border:1px #ccc solid;margin-right:2px;"/>
@@ -66,7 +66,10 @@
 
 <script>
     var editor = new UM.Editor();
-    editor.render('editor')
+    editor.render('editor');
+    editor.ready(function(){
+        editor.focus();
+    });
 </script>
 
 </body>
