--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             padding: 10px;
             -webkit-box-sizing: border-box;
             display: block;
-            font-size: 14px;
+            font-size: 1em;
             border: 1px solid #c6c6c6;
             border-bottom: 1px solid #eaeaea;
             font-weight: 600;
@@ -44,6 +44,7 @@
         }
     </style>
     <script src="zepto.js"></script>
+    <script src="hammer.js"></script>
     <script src="third-party/gmu/gmu.js"></script>
     <link rel="stylesheet" href="third-party/gmu/gmu.css"/>
 
