--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <link rel="stylesheet" href="./themes/umeditor.css"/>
 </head>
 <body>
+<h1>移动端富文本编辑器展示页</h1>
 <div style="width:100%;min-height:80px;" class="editor_input" id="editor" >
     <p>移动版本的所见即所得编辑器，用户可以直接插入图片，表情，而且图片还是可以拖动的，方便用户在移动端发出的文章可以做到文字于图片的语意一致，而不是现在常用的文字和图片完全分离的交互方式</p>
     <p>
