by Jinqn 添加展示页面

--- a/index.html
+++ b/index.html
@@ -55,12 +55,27 @@
 <body>
 <h1>移动端富文本编辑器展示页</h1>
 <div style="width:100%;min-height:80px;" class="editor_input" id="editor" >
-    <p>移动版本的所见即所得编辑器，用户可以直接插入图片，表情，而且图片还是可以拖动的，方便用户在移动端发出的文章可以做到文字于图片的语意一致，而不是现在常用的文字和图片完全分离的交互方式</p>
-    <p>
-        <img class="slider" src="http://bs.baidu.com/uploadimg/1031384407855.jpg" width="60" height="60" style="border:1px #ccc solid;margin-right:2px;"/><img class="slider" src="http://bs.baidu.com/uploadimg/14711384407892.jpg" width="60" height="60" style="border:1px #ccc solid;margin-right:2px;"/><img class="slider" src="http://bs.baidu.com/uploadimg/96771384407909.jpg" width="60" height="60" style="border:1px #ccc solid;margin-right:2px;"/><img class="slider" src="http://bs.baidu.com/uploadimg/53231384407920.jpg" width="60" height="60" style="border:1px #ccc solid;margin-right:2px;"/>
+    <p >
+        起初，我们几个人都感受到目前的ugc方式满足不了我们的需求。发出帖子后经常发现读我们帖子的读者不能够很好地感知到我们发帖者的心情而产生共鸣。于是我们三个人坐在一起讨论是不是有更好的技术、更好的设计可以解决这个问题：
     </p>
-    <p>移动版本的所见即所得编辑器，用户可以直接插入图片，表情，而且图片还是可以拖动的，方便用户在移动端发出的文章可以做到文字于图片的语意一致，而不是现在常用的文字和图片完全分离的交互方式</p>
-
+    <p >
+        <img src="http://weditor.duapp.com/php/upload/20131203/13860393054882.png" style="width: 60px;height: 60px;margin-right: 2px"/><img src="http://weditor.duapp.com/php/upload/20131203/13860393183683.png" style="font-size: 1em;width: 60px;height: 60px;margin-right: 2px"/>
+    </p>
+    <p >
+        通过几次的头脑风暴，我们分析出了目前设计和技术的使用痛点，以及有怎样好的优化思路：
+    </p>
+    <p >
+        <img src="http://weditor.duapp.com/php/upload/20131203/13860393114231.png" style="font-size: 1em;width: 60px;height: 60px;margin-right: 2px"/><img src="http://weditor.duapp.com/php/upload/20131203/13860393187216.png" style="font-size: 1em;width: 60px;height: 60px;margin-right: 2px"/>
+    </p>
+    <p >
+        之后，本着hackathon的行胜于言的理念，我们把思路实现成了可用的代码~期待为产品线的发展做出贡献
+    </p>
+    <p >
+        <img src="http://weditor.duapp.com/php/upload/20131203/13860393112472.png" style="font-size: 1em;width: 60px;height: 60px;margin-right: 2px"/><img src="http://weditor.duapp.com/php/upload/20131203/13860393105095.png" style="font-size: 1em;width: 60px;height: 60px;margin-right: 2px"/><img src="http://weditor.duapp.com/php/upload/20131203/13860393134806.png" style="font-size: 1em;width: 60px;height: 60px;margin-right: 2px"/>
+    </p>
+    <p>
+        <br/>
+    </p>
 </div><div class="editor_toolbar"><a class="editor_submit">提交</a></div>
 
 <script>
