--- a/index.html
+++ b/index.html
@@ -4,13 +4,27 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
     <title>M-Editor演示</title>
+    <script src="third-party/zepto.js"></script>
+    <script src="third-party/gmu/gmu.js"></script>
+    <link rel="stylesheet" href="third-party/gmu/gmu.css"/>
+
+    <script src="umeditor.config.js"></script>
+    <script src="editor_api.js"></script>
+    <script src="lang/zh-cn/zh-cn.js"></script>
+    <link rel="stylesheet" href="./themes/reset.css"/>
+    <link rel="stylesheet" href="./themes/umeditor.css"/>
+
     <style>
+        .editor_container{
+            margin: 5px;
+        }
         .editor_input {
             word-wrap: break-word;
             -webkit-appearance: none;
             -webkit-border-radius: 3px;
             width: 100%;
             padding: 10px;
+            margin-top: 5px;
             -webkit-box-sizing: border-box;
             display: block;
             font-size: 1em;
@@ -28,65 +42,63 @@
         .editor_toolbar {
             text-align: right;
         }
-        .editor_submit {
-            position: relative;
-            right: 0px;
-            margin-top: 4px;
-            padding: 0 10px;
-            line-height: 30px;
+        /*.editor_submit {*/
+            /*position: relative;*/
+            /*right: 0px;*/
+            /*margin-top: 4px;*/
+            /*padding: 0 10px;*/
+            /*line-height: 30px;*/
+            /*display: inline-block;*/
+            /*text-decoration: none;*/
+            /*border: 1px solid #1e84db;*/
+            /*background: #2d90e4;*/
+            /*color: #fff;*/
+            /*border-radius: 5px;*/
+            /*box-shadow: 0 0 3px #bfc2c6;*/
+        /*}*/
+        #form{
             display: inline-block;
-            text-decoration: none;
-            border: 1px solid #1e84db;
-            background: #2d90e4;
-            color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 0 3px #bfc2c6;
+            float: right;
         }
     </style>
-    <script src="third-party/zepto.js"></script>
-    <script src="third-party/gmu/gmu.js"></script>
-    <link rel="stylesheet" href="third-party/gmu/gmu.css"/>
-
-    <script src="umeditor.config.js"></script>
-    <script src="editor_api.js"></script>
-    <script src="lang/zh-cn/zh-cn.js"></script>
-    <link rel="stylesheet" href="./themes/umeditor.css"/>
 </head>
 <body>
-<h1>移动端富文本编辑器展示页</h1>
-<div style="width:100%;min-height:200px;" class="editor_input" id="editor" >
-    <p >
-        起初，我们几个人都感受到目前的ugc方式满足不了我们的需求。发出帖子后经常发现读我们帖子的读者不能够很好地感知到我们发帖者的心情而产生共鸣。于是我们三个人坐在一起讨论是不是有更好的技术、更好的设计可以解决这个问题：
-    </p>
-    <p >
-        <img src="http://weditor.duapp.com/php/upload/20131203/13860393054882.png" style="width: 60px;height: 60px;margin-right: 2px"/><img src="http://weditor.duapp.com/php/upload/20131203/13860393183683.png" style="font-size: 1em;width: 60px;height: 60px;margin-right: 2px"/>
-    </p>
-    <p >
-        通过几次的头脑风暴，我们分析出了目前设计和技术的使用痛点，以及有怎样好的优化思路：
-    </p>
-    <p >
-        <img src="http://weditor.duapp.com/php/upload/20131203/13860393114231.png" style="font-size: 1em;width: 60px;height: 60px;margin-right: 2px"/><img src="http://weditor.duapp.com/php/upload/20131203/13860393187216.png" style="font-size: 1em;width: 60px;height: 60px;margin-right: 2px"/>
-    </p>
-    <p >
-        之后，本着hackathon的行胜于言的理念，我们把思路实现成了可用的代码~期待为产品线的发展做出贡献
-    </p>
-    <p >
-        <img src="http://weditor.duapp.com/php/upload/20131203/13860393112472.png" style="font-size: 1em;width: 60px;height: 60px;margin-right: 2px"/><img src="http://weditor.duapp.com/php/upload/20131203/13860393105095.png" style="font-size: 1em;width: 60px;height: 60px;margin-right: 2px"/><img src="http://weditor.duapp.com/php/upload/20131203/13860393134806.png" style="font-size: 1em;width: 60px;height: 60px;margin-right: 2px"/>
-    </p>
-    <p>
-        <br/>
-    </p>
-</div>
-<div class="editor_toolbar">
+<h1 class="pagebar">
+    移动端富文本编辑器
     <form action="show.php" id="form" method="post">
-        <input type="hidden" name="content" id="content" />
-        <a class="editor_submit" id="submit">提交</a>
+    <input type="hidden" name="content" id="content" class="" />
+    <a class="editor_submit floatright btn" id="submit">提交</a>
     </form>
+</h1>
+<div class="editor_container">
+    <div style="width:100%;min-height:200px;" class="editor_input" id="editor" >
+        <p >
+            起初，我们几个人都感受到目前的ugc方式满足不了我们的需求。发出帖子后经常发现读我们帖子的读者不能够很好地感知到我们发帖者的心情而产生共鸣。于是我们三个人坐在一起讨论是不是有更好的技术、更好的设计可以解决这个问题：
+        </p>
+        <p >
+            <img src="http://weditor.duapp.com/php/upload/20131203/13860393054882.png" style="width: 60px;height: 60px;margin-right: 2px"/><img src="http://weditor.duapp.com/php/upload/20131203/13860393183683.png" style="font-size: 1em;width: 60px;height: 60px;margin-right: 2px"/>
+        </p>
+        <p >
+            通过几次的头脑风暴，我们分析出了目前设计和技术的使用痛点，以及有怎样好的优化思路：
+        </p>
+        <p >
+            <img src="http://weditor.duapp.com/php/upload/20131203/13860393114231.png" style="font-size: 1em;width: 60px;height: 60px;margin-right: 2px"/><img src="http://weditor.duapp.com/php/upload/20131203/13860393187216.png" style="font-size: 1em;width: 60px;height: 60px;margin-right: 2px"/>
+        </p>
+        <p >
+            之后，本着hackathon的行胜于言的理念，我们把思路实现成了可用的代码~期待为产品线的发展做出贡献
+        </p>
+        <p >
+            <img src="http://weditor.duapp.com/php/upload/20131203/13860393112472.png" style="font-size: 1em;width: 60px;height: 60px;margin-right: 2px"/><img src="http://weditor.duapp.com/php/upload/20131203/13860393105095.png" style="font-size: 1em;width: 60px;height: 60px;margin-right: 2px"/><img src="http://weditor.duapp.com/php/upload/20131203/13860393134806.png" style="font-size: 1em;width: 60px;height: 60px;margin-right: 2px"/>
+        </p>
+        <p>
+            <br/>
+        </p>
+    </div>
 </div>
-
+<input type="text"/>
 <script>
     var editor = new UM.Editor();
-    editor.render('editor')
+    editor.render('editor');
 
     $('#submit').click(function(){
         $('#content').val(editor.getContent());
