--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 </head>
 <body>
 <h1 class="pagebar">
+    <span class="blank floatleft"></span>
     移动端富文本编辑器
     <form action="show.php" id="form" method="post">
     <input type="hidden" name="content" id="content" class="" />
